Setup Camera & Player Input for Operation Tools

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,7 +2,8 @@
 
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Engine/Maps/Templates/Template_Default.Template_Default
-
+GlobalDefaultGameMode=/Game/BluePrints/OperationTools_ModeBase.OperationTools_ModeBase_C
+EditorStartupMap=/Game/Maps/01_PlaneMeshDemo.01_PlaneMeshDemo
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
