02_Heart FBX (3D Model)_Demo Finished (Grasping Mesh)

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,7 +3,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Engine/Maps/Templates/Template_Default.Template_Default
 GlobalDefaultGameMode=/Game/BluePrints/OperationTools_ModeBase.OperationTools_ModeBase_C
-EditorStartupMap=/Game/Maps/01_PlaneMeshDemo.01_PlaneMeshDemo
+EditorStartupMap=/Game/Maps/02_HeartMeshDemo.02_HeartMeshDemo
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
